work3/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: work3-http
  name: work3
spec:
  containers:
    - image: nginx
      name: work3-http
      ports:
      - containerPort: 80
      volumeMounts:
      - name: data
        mountPath: "/usr/share/nginx/html/images"
      - name: config
        mountPath: "/etc/nginx/conf.d/"
      - name: index
        mountPath: "/usr/share/nginx/html"
  volumes:
  - name: config
    configMap:
      name: work3-config
      items:
      - key: "default.conf"
        path: "default.conf"
  - name: data
    persistentVolumeClaim:
      claimName: work3
  - name: index
    configMap:
      name: work3-config
      items:
      - key: "index.html"
        path: "index.html"
