work3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: work3
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: work3-http
